--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,15 @@
 
     <title>Museu Virtual</title>
 </head>
+
 <body>
 
     <h1>Museu Virtual</h1>
     <div>
         <% for (let i=0; i<paintings.length; i++) {%>
             <div class="card">
-                <img
-                src="<%= paintings[i].urlimagem %>"
-                class="card-image"
-                alt="<%= paintings[i].nome %>">
+                <a href="/home?idobra=<%= paintings[i].idobra %>"><img src="<%= paintings[i].urlimagem %>"
+                        class="card-image" alt="<%= paintings[i].nome %>"></a>
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= paintings[i].nome %>
@@ -31,8 +31,9 @@
                 </div>
             </div>
             <hr />
-        <% } %>
+            <% } %>
     </div>
-    
+
 </body>
+
 </html>
